# laundromat

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
docs/: ARCHITECTURE.md  USAGE.md
src/laundromat/: contracts.py  defense.py  pipeline.py  scoring.py
src/laundromat/ingest/: __init__.py  accounts.py  begleit.py  docs.py  gdpdu.py
src/laundromat/lenses/: __init__.py  external.py  graph.py  graph_cognee.py  reconcile.py  rules.py  semantic.py  stats.py  temporal.py
src/laundromat/report/: __init__.py  app.py
tests/: test_ingest.py  test_pipeline.py  test_report.py  test_rules.py  test_stats.py  test_temporal.py  test_upload_robustness.py
tools/: calibrate.py  eval_groundtruth.py  false_positive_sweep.py  generalize_check.py  report_md.py
