[project]
name = "laundromat"
version = "0.1.0"
description = "Audit agent that finds layered fraud in accounting dossiers, every claim traced to its source"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "rapidfuzz>=3.6",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ai = [
    "openai>=1.30",
    "tavily-python>=0.3",
    "cognee>=0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
